# DMC5_Research

./: .gitignore  DMC5_Combat.md  LICENSE  README.md  RE_RSZ_MotList.bt  RE_RSZ_UVS.bt  RE_RSZ_WEL.bt  RE_RSZ_uvar.bt  dmc5_pl0800_yamato_motlist.txt
actionEditor/: CMakeLists.txt  CMakePresets.json  vcpkg.json
actionEditor/cmake/: FindScopeGuard.cmake  Findgl3w.cmake  Findglm.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findlua.cmake  Findnlohmann_json.cmake  Findsol2.cmake  Findstb_image.cmake
actionEditor/source/: actionEditor.cpp
actionEditor/source/application/: CMakeLists.txt
actionEditor/source/bindings/: FS.cpp  FS.hpp  ImGui.cpp  ImGui.hpp  Json.cpp  Json.hpp
actionEditor/source/data/: actionEditor.lua  hello_world.lua  imgui_ext.lua
actionEditor/source/data/lua/: a_lua_script.lua
dmc5_pseudocode/: pe_info.txt  re_load_uvar.c  via_uvar.h
motlist/: pl0800_motlist_infos.txt
motlist_index/: [0]pl0800_basic.motlist.txt  [1]pl0800_move.motlist.txt  [200]pl0800_yamato_motlist.txt  [220]pl0800_forceedge.motlist.txt  pl0800_beowulf.motlist.txt  pl0800_forceedge.motlist.txt  pl0800_move.motlist.txt  pl0800_strafe.motlist.txt  pl0800_yamato_motlist.txt
python/: BinaryStream.py  export_motlist_infos.py
reframework/autorun/: bhvt_editor.lua
